Se agregó punto

--- a/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
+++ b/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
@@ -1045,9 +1045,9 @@
         }
       ],
       "source": [
-        "# Printing (again) the default weights of resnet18 with requires_grad in False\n",
+        "# Printing (again) the default weights of resnet18 with requires_grad in False.\n",
         "for i, parameter in enumerate(model_aux.parameters()):\n",
-        "    print(i, parameter.requires_grad)"
+        "    print(i, parameter.requires_grad) "
       ]
     },
     {
