Se agrega Activity_2b

--- a/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
+++ b/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
@@ -74,6 +74,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 186,
       "metadata": {
@@ -451,7 +458,7 @@
         "            optimiser.step()\n",
         "\n",
         "        acc = accuracy(model, val_loader)\n",
-        "        print(f'Epoch: {epoch}, costo: {cost.item()}, accuracy: {acc},')"
+        "        print(f'Epoch: {epoch}, cost: {cost.item()}, accuracy: {acc},')"
       ]
     },
     {
