Se añadieron comentarios

--- a/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
+++ b/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
@@ -269,6 +269,11 @@
       "source": [
         "# Printing the x and y shape of each minibatch just to validate that everything is ok\n",
         "for i, (x, y) in enumerate(val_loader):\n",
+        "    # i represents the number of iteration\n",
+        "    # x has a shale with 4 elements, first indicates the quantity of images, second the \n",
+        "    # number of channels of each image and last two\n",
+        "    # indicates the number of pixels\n",
+        "    # y has a shape that only indicates the numbers images that would be on x\n",
         "    print(i, x.shape, y.shape)"
       ]
     },
@@ -351,6 +356,7 @@
       ],
       "source": [
         "# Create an array with the name of the different classes (in string)\n",
+        "# Each one of these classes are going to be output of the CNN\n",
         "classes = ['Plane', 'Car', 'Bird', 'Cat', 'Deer','Dog', 'Frog', 'Horse', 'Ship', 'Truck']\n",
         "\n",
         "# Function to print images on screen\n",
@@ -401,16 +407,16 @@
         "    Returns:\n",
         "    float: Model accuracy\n",
         "    \"\"\"\n",
-        "    num_correct = 0\n",
+        "    num_correct = 0 #First we intialize the variables\n",
         "    num_total = 0\n",
-        "    model.eval()\n",
-        "    model = model.to(device=device)\n",
-        "    with torch.no_grad():\n",
+        "    model.eval() # This function set the model on evaluation, then it will not compute the gradiants of the parameters\n",
+        "    model = model.to(device=device) # The model is charged on the device\n",
+        "    with torch.no_grad(): \n",
         "        for (xi, yi) in loader:\n",
-        "            xi = xi.to(device=device, dtype = torch.float32)\n",
+        "            xi = xi.to(device=device, dtype = torch.float32) # Each image and correct class of the image is charged on the GPU\n",
         "            yi = yi.to(device=device, dtype = torch.long)\n",
-        "            scores = model(xi) # mb_size, 10\n",
-        "            _, pred = scores.max(dim=1) #pred shape (mb_size )\n",
+        "            scores = model(xi) # mb_size, 10 With this function all the model runs and calculates its scores\n",
+        "            _, pred = scores.max(dim=1) #pred shape (mb_size ) \n",
         "            num_correct += (pred == yi).sum() # pred shape (mb_size), yi shape (mb_size, 1)\n",
         "            num_total += pred.size(0)\n",
         "        return float(num_correct)/num_total\n",
@@ -443,21 +449,21 @@
         "    optimiser: Predefined and parameterized optimization function\n",
         "    epochs (int): Number of training epochs\n",
         "    \"\"\"\n",
-        "    model = model.to(device=device)\n",
+        "    model = model.to(device=device) # With this function we charge the model on the device, on the gpu\n",
         "    for epoch in range(epochs):\n",
         "        for i, (xi, yi) in enumerate(train_loader):\n",
-        "            model.train()\n",
-        "            xi = xi.to(device=device, dtype=torch.float32)\n",
+        "            model.train() # Now we set the model on train mode, then it computes the gradiants\n",
+        "            xi = xi.to(device=device, dtype=torch.float32) \n",
         "            yi = yi.to(device=device, dtype=torch.long)\n",
-        "            scores = model(xi)\n",
+        "            scores = model(xi) #Once we charge the images on the GPU the model computes all the variables on the NN\n",
         "\n",
-        "            cost = F.cross_entropy(input= scores, target=yi)\n",
+        "            cost = F.cross_entropy(input= scores, target=yi) #And with this we get the probability precisión of the calculus\n",
         "\n",
-        "            optimiser.zero_grad()\n",
-        "            cost.backward()\n",
-        "            optimiser.step()\n",
+        "            optimiser.zero_grad() # This lines cleans the old gradiants calculated\n",
+        "            cost.backward() # Then we compute the gradiants of the loss\n",
+        "            optimiser.step() # Then we perform the update of the nn\n",
         "\n",
-        "        acc = accuracy(model, val_loader)\n",
+        "        acc = accuracy(model, val_loader) \n",
         "        print(f'Epoch: {epoch}, cost: {cost.item()}, accuracy: {acc},')"
       ]
     },
@@ -503,7 +509,7 @@
       ],
       "source": [
         "# Load ResNet18 pretrianed from torchvision\n",
-        "model_resnet18 = models.resnet18(pretrained=True)"
+        "model_resnet18 = models.resnet18(pretrained=True) # We call the model to use that is proved has a good performance"
       ]
     },
     {
@@ -599,7 +605,7 @@
       "source": [
         "# Printing the default weights of resnet18\n",
         "for i, w in enumerate(model_resnet18.parameters()):\n",
-        "    print(i, w.shape, w.requires_grad)"
+        "    print(i, w.shape, w.requires_grad) #We make sure that the parameters are good to sync with our dataset"
       ]
     },
     {
@@ -710,7 +716,7 @@
       ],
       "source": [
         "# Printing the different layers that are part of resnet18\n",
-        "model_resnet18"
+        "model_resnet18 "
       ]
     },
     {
@@ -1054,7 +1060,8 @@
       "source": [
         "# Printing (again) the default weights of resnet18 with requires_grad in False.\n",
         "for i, parameter in enumerate(model_aux.parameters()):\n",
-        "    print(i, parameter.requires_grad) "
+        "    print(i, parameter.requires_grad)   # This false indicates that this leyers are frozen,\n",
+        "                                        # they are not going to be modified on our train"
       ]
     },
     {
@@ -1083,11 +1090,12 @@
         "# The resnet18 model is declared with the original layers plus the layers we need for our case\n",
         "# 512 in features from the last layer of model_aux, and 10 out features (classes)\n",
         "model1 = nn.Sequential(model_aux,\n",
-        "                       nn.Flatten(),\n",
-        "                       nn.Linear(in_features=512, out_features= 10, bias= True))\n",
+        "                       nn.Flatten(), #Flatten layer creates a vector from all the pixels we have\n",
+        "                       nn.Linear(in_features=512, out_features= 10, bias= True)) # We perform an FC layer to create the outputs\n",
         "\n",
         "# Using Adam as optimization function\n",
-        "optimiser = torch.optim.Adam(model1.parameters(), lr=lr, betas=(0.9, 0.999))"
+        "optimiser = torch.optim.Adam(model1.parameters(), lr=lr, betas=(0.9, 0.999))    # optimizer will change \n",
+        "                                                                                # the values only on out last FC layer"
       ]
     },
     {
@@ -1272,10 +1280,10 @@
       ],
       "source": [
         "# Load pretrained model\n",
-        "model_resnet50 = models.resnet50(pretrained=True)\n",
+        "model_resnet50 = models.resnet50(pretrained=True) # This model is proved that has a good performance\n",
         "\n",
         "# Adjust to our model\n",
-        "model_aux2 = nn.Sequential(*list(model_resnet50.children())[:-1])\n",
+        "model_aux2 = nn.Sequential(*list(model_resnet50.children())[:-1]) #we remove the last layer to only have 10 output layers\n",
         "for i, parameter in enumerate(model_aux2.parameters()):\n",
         "    parameter.requires_grad = False\n",
         "\n",
@@ -1288,8 +1296,8 @@
         "# The resnet50 model is declared with the original layers plus the layers we need for our case\n",
         "# 2048 in features from the last layer of model_aux2, and 10 out features (classes)\n",
         "model2 = nn.Sequential(model_aux2,\n",
-        "                       nn.Flatten(),\n",
-        "                       nn.Linear(in_features=2048, out_features= 10, bias= True))\n",
+        "                       nn.Flatten(), #as the previous model, we create a vector of pixels\n",
+        "                       nn.Linear(in_features=2048, out_features= 10, bias= True)) # and create a FC layer at the end\n",
         "\n",
         "# Using Adam as optimization function\n",
         "optimiser = torch.optim.Adam(model2.parameters(), lr=lr, betas=(0.9, 0.999))\n",
@@ -1331,10 +1339,10 @@
       ],
       "source": [
         "# Load pretrained model\n",
-        "model_alexnet = models.alexnet(weights='DEFAULT')\n",
+        "model_alexnet = models.alexnet(weights='DEFAULT') # This model is proved that has a good performance\n",
         "\n",
         "# Adjust to our model\n",
-        "model_aux3 = nn.Sequential(*list(model_alexnet.children())[:-1])\n",
+        "model_aux3 = nn.Sequential(*list(model_alexnet.children())[:-1]) #we remove the last layer to only have 10 output layers\n",
         "for i, parameter in enumerate(model_aux3.parameters()):\n",
         "    parameter.requires_grad = False\n",
         "\n",
