Se agregaron comentarios

--- a/AMLM/Activity_2b/TC4033_Activity2b_42.ipynb
+++ b/AMLM/Activity_2b/TC4033_Activity2b_42.ipynb
@@ -1037,6 +1037,10 @@
    "source": [
     "# Loop through batches in the Training Loader and print out the x and y values\n",
     "for i, (x, y) in enumerate(train_loader):\n",
+    "    # X value is a variable with of four dimensions that indicates the number of imanges, \n",
+    "    # number of channels, and the last two indicates the number of pixels \n",
+    "    # Y value only shows a dimension that represents the number of images that x should have\n",
+    "\n",
     "    print(x.shape, y.shape)"
    ]
   },
@@ -1106,7 +1110,7 @@
     "\n",
     "# Function to print images on screen\n",
     "def plot_figure(image):\n",
-    "    plt.imshow(np.transpose(image,(1,2,0)))\n",
+    "    plt.imshow(np.transpose(image,(1,2,0))) \n",
     "    plt.axis('off')\n",
     "    plt.show()\n",
     "\n",
@@ -1151,12 +1155,15 @@
     "    Returns:\n",
     "    None. Displays the grid with 80 images\n",
     "    \"\"\"\n",
-    "    classes = test_loader.dataset.classes\n",
+    "    classes = test_loader.dataset.classes #On classes we save the name of the classes from the dataset\n",
     "    total_samples = 8 # Number of items to print per class\n",
     "    plt.figure(figsize=(15,15))\n",
     "    for label, sample in enumerate(classes):\n",
-    "        class_idxs = np.flatnonzero(label == np.array(test_loader.dataset.targets))\n",
+    "        #The classes that match with the searched index are gotten\n",
+    "        class_idxs = np.flatnonzero(label == np.array(test_loader.dataset.targets))  \n",
+    "        #Randomly 8 indices are selected from teh list of indices\n",
     "        sample_idxs = np.random.choice(class_idxs, total_samples, replace = False)\n",
+    "        #Loops through the randomly selected image indices for the current class\n",
     "        for i, idx in enumerate(sample_idxs):\n",
     "            plt_idx = i*len(classes) + label + 1\n",
     "            plt.subplot(total_samples, len(classes), plt_idx)\n",
@@ -1195,18 +1202,20 @@
     "    Returns:\n",
     "    float: Model accuracy\n",
     "    \"\"\"\n",
-    "    num_correct = 0\n",
+    "    num_correct = 0 #First we intialize the variables\n",
     "    num_total = 0\n",
-    "    model.eval()\n",
-    "    model = model.to(device=device)\n",
-    "    with torch.no_grad():\n",
+    "    model.eval() # This function set the model on evaluation, then it will not compute the gradiants of the parameters\n",
+    "    model = model.to(device=device) # The model is charged on the device, on the gpu\n",
+    "    with torch.no_grad(): # We set this function to make sure no gradiants are compute\n",
     "        for xi, yi in loader:\n",
-    "            xi = xi.to(device=device, dtype = torch.float32)\n",
+    "            xi = xi.to(device=device, dtype = torch.float32) # Each image and correct class of the image is charged on the GPU\n",
     "            yi = yi.to(device=device, dtype = torch.long)\n",
-    "            scores = model(xi) \n",
-    "            _, pred = scores.max(dim=1) \n",
-    "            num_correct += (pred == yi).sum() \n",
-    "            num_total += pred.size(0)\n",
+    "            scores = model(xi)  # mb_size, 10 With this function all the model runs and calculates its scores\n",
+    "            _, pred = scores.max(dim=1)  #pred shape (mb_size ) \n",
+    "            # the predicted labels are compared with the true labels and get summed all the right answers\n",
+    "            num_correct += (pred == yi).sum()  \n",
+    "            num_total += pred.size(0) \n",
+    "        # Returns the ratio of correctly predicted samples to the total number of samples\n",
     "        return float(num_correct)/num_total   "
    ]
   },
@@ -1232,17 +1241,17 @@
     "    optimiser: The optimizer used to update the model's weights\n",
     "    epochs: The number of times the training loop will run over the entire dataset\n",
     "    \"\"\"\n",
-    "    model = model.to(device=device)\n",
+    "    model = model.to(device=device)# With this function we charge the model on the device, on the gpu\n",
     "    for epoch in range(epochs):\n",
     "        for i, (xi, yi) in enumerate(train_loader):\n",
-    "            model.train()\n",
+    "            model.train()# Now we set the model on train mode, then it computes the gradiants\n",
     "            xi = xi.to(device=device, dtype=torch.float32)\n",
     "            yi = yi.to(device=device, dtype=torch.long)\n",
-    "            scores = model(xi)\n",
-    "            cost = F.cross_entropy(input= scores, target=yi)\n",
-    "            optimiser.zero_grad()           \n",
-    "            cost.backward()\n",
-    "            optimiser.step()              \n",
+    "            scores = model(xi)  #Once we charge the images on the GPU the model computes all the variables on the NN\n",
+    "            cost = F.cross_entropy(input= scores, target=yi)  #And with this we get the probability precisión of the calculus\n",
+    "            optimiser.zero_grad()   # This lines cleans the old gradiants calculated        \n",
+    "            cost.backward() # Then we compute the gradiants of the loss\n",
+    "            optimiser.step()  # Then we perform the update of the nn              \n",
     "        acc = accuracy(model, val_loader) \n",
     "        print(f'Epoch: {epoch}, cost: {cost.item()}, accuracy: {acc},')"
    ]
