Se modificaron los markdown del inicio

--- a/AMLM/Activity_2b/TC4033_Activity2b_42.ipynb
+++ b/AMLM/Activity_2b/TC4033_Activity2b_42.ipynb
@@ -24,18 +24,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fidings"
+    "# Justifation of model architecture selection"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the first try we tried to train diferent models using the same optimizer, however this wasn't working. \n",
-    "The correct path to follow was create a diferent optimizer for each model.\n",
+    "The model architecture with FC layers performs a training with poor accuracy for the task of categorizing the images correctly.\n",
     "\n",
-    "Besides Resnet, VGG and GoogLeNet were able to get a good accuracy. The number of input data on the last FC layer only had to be \n",
-    "adapted to work whit those new models"
+    "The FC layers are not able to find the correct values for the weights and bias on few epochs, a different kind of method is necessary.\n",
+    "\n",
+    "Convolutional operations applied on the images generate interesting findings, they can find patterns on the images that we are not able to see on the first sight, just like our brain interprets the world, but we are not conscious about how our brain process the information.\n",
+    "\n",
+    "The convolutional neural network computes convolutional operations resulting on different approaches that only FC layers are able. Then that's why CNN have a better result and accuracy at the end of training."
    ]
   },
   {
@@ -1225,7 +1227,7 @@
     "    model.eval() # This function set the model on evaluation, then it will not compute the gradiants of the parameters\n",
     "    model = model.to(device=device) # The model is charged on the device, on the gpu\n",
     "    with torch.no_grad(): # We set this function to make sure no gradiants are compute\n",
-    "        for xi, yi in loader:\n",
+    "        for (xi, yi) in loader:\n",
     "            xi = xi.to(device=device, dtype = torch.float32) # Each image and correct class of the image is charged on the GPU\n",
     "            yi = yi.to(device=device, dtype = torch.long)\n",
     "            scores = model(xi)  # mb_size, 10 With this function all the model runs and calculates its scores\n",
