--- a/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
+++ b/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
@@ -26,6 +26,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the first try we tried to train diferent models using the same optimizer, however this wasn't working. \n",
+    "The correct path to follow was create a diferent optimizer for each model.\n",
+    "\n",
+    "Besides Resnet, VGG and GoogLeNet were able to get a good accuracy. The number of input data on the last FC layer only had to be \n",
+    "adapted to work whit those new models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "G5p3vNMmB1UV"
    },
