Se agrega detalle con imagenes a Actividad 2b

--- a/AMLM/Activity_2b/TC4033_Activity2b_42.ipynb
+++ b/AMLM/Activity_2b/TC4033_Activity2b_42.ipynb
@@ -49,7 +49,7 @@
     "## Convolutional Neural Networks\n",
     "<br>\n",
     "\n",
-    "#### Activity 2b: Building a CNN for CIFAR10 dataset with PyTorch\n",
+    "### Activity 2b: Building a CNN for CIFAR10 dataset with PyTorch\n",
     "<br>\n",
     "\n",
     "- Objective\n",
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Libraries"
+    "### Libraries"
    ]
   },
   {
@@ -177,6 +177,16 @@
     "                            transform=transform_cifar)\n",
     "test_loader = DataLoader(cifar10_test, batch_size=MINIBATCH_SIZE,\n",
     "                        sampler=sampler.SubsetRandomSampler(range(NUM_VAL, len(cifar10_test))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](cifar10.png)](cifar10.png \"CIFAR-10 Samples\")\n",
+    "\n",
+    "Sample images of CIFAR-10\n",
+    "> CIFAR-10. Papers With Code. https://paperswithcode.com/dataset/cifar-10"
    ]
   },
   {
@@ -1361,6 +1371,16 @@
    "metadata": {},
    "source": [
     "## Sequential CNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](cnn.webp)](cnn.webp \"CNN Sample\")\n",
+    "\n",
+    "Example of a Convolutional Neural Network, including different convolutional layers with ReLU activation layers, kernels, max pooling and a Fully Connect layer with ReLU activation layer\n",
+    "> Kromydas, B., & Kromydas, B. (2024, June 24). Convolutional Neural Network: A complete guide. LearnOpenCV – Learn OpenCV, PyTorch, Keras, Tensorflow With Code, & Tutorials. https://learnopencv.com/understanding-convolutional-neural-networks-cnn/"
    ]
   },
   {
