Se agrega mayor detalle a la Actividad 2c

--- a/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
+++ b/AMLM/Activity_2c/TC5033_Activity2c_42.ipynb
@@ -504,6 +504,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](resnet18.png)](resnet18.png \"Original ResNet-18 Architecture\")\n",
+    "\n",
+    "Original ResNet-18 Architecture\n",
+    "\n",
+    "> Figure 1 Original ReSNet-18 Architecture. ResearchGate. https://www.researchgate.net/figure/Original-ResNet-18-Architecture_fig1_373653509"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
@@ -613,6 +624,17 @@
     "# Printing the default weights of resnet18\n",
     "for i, w in enumerate(model_resnet18.parameters()):\n",
     "    print(i, w.shape, w.requires_grad) #We make sure that the parameters are good to sync with our dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](resnet.webp)](resnet.webp \"ResNet\")\n",
+    "\n",
+    "Skip Connection — Adding the original input to the output of the convolutional block.\n",
+    "\n",
+    "> Rastogi, A. (2022, March 19). ResNet50 - Dev Genius. Medium. https://blog.devgenius.io/resnet50-6b42934db431"
    ]
   },
   {
@@ -1256,6 +1278,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](resnet50.webp)](resnet50.webp \"ResNet-50 Architecture\")\n",
+    "\n",
+    "This diagram illustrates the architecture of ResNet50, a deep convolutional neural network. It shows the network's structure from input to output, with colored blocks representing different stages. The image details the convolutional layers, their sizes, and connections, while also providing a comparison to other ResNet variants (101 and 152 layers) in the top right corner.\n",
+    "\n",
+    "> Rastogi, A. (2022, March 19). ResNet50 - Dev Genius. Medium. https://blog.devgenius.io/resnet50-6b42934db431"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
@@ -1312,6 +1345,17 @@
    },
    "source": [
     "### AlexNet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![](alexnet.jpg)](alexnet.jpg \"AlexNet Architecture\")\n",
+    "\n",
+    "AlexNet architecture: a pioneering convolutional neural network featuring multiple convolutional and pooling layers, followed by fully connected layers and a softmax output for image classification.\n",
+    "\n",
+    "> Paravisionlab.Co.In. (2024, July 8). How AlexNet architecture revolutionized deep Learning. paravisionlab.co.in. https://paravisionlab.co.in/alexnet-architecture/"
    ]
   },
   {
@@ -1461,13 +1505,6 @@
     "#AlexNet\n",
     "accuracy(model3, test_loader)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
