Subi mi version del 3a

--- a/AMLM/Activity_3a/A3a_DL_TC5033_embeddings_hw1.ipynb
+++ b/AMLM/Activity_3a/A3a_DL_TC5033_embeddings_hw1.ipynb
@@ -107,7 +107,12 @@
    "source": [
     "# Create dictionary with embeddings\n",
     "def create_emb_dictionary(path):\n",
-    "    pass"
+    "    dict_glove={}\n",
+    "    with open(path, 'r', encoding='utf8') as archivo:\n",
+    "            for linea in archivo:\n",
+    "                a,*b=linea.split()\n",
+    "                dict_glove[a]=b\n",
+    "    return dict_glove"
    ]
   },
   {
@@ -135,12 +140,12 @@
    "outputs": [],
    "source": [
     "# Serialize\n",
-    "with open('embeddings_dict_50D.pkl', 'wb') as f:\n",
-    "    pickle.dump(embeddings_dict, f)\n",
+    "#with open('embeddings_dict_50D.pkl', 'wb') as f:\n",
+    "#    pickle.dump(embeddings_dict, f)\n",
     "\n",
     "# Deserialize\n",
-    "# with open('embeddings_dict_200D.pkl', 'rb') as f:\n",
-    "#     embeddings_dict = pickle.load(f)"
+    "with open('embeddings_dict_50D.pkl', 'rb') as f:\n",
+    "    embeddings_dict = pickle.load(f)"
    ]
   },
   {
@@ -192,7 +197,26 @@
    "outputs": [],
    "source": [
     "def plot_embeddings(emb_path, words2show, emb_dim, embeddings_dict, func = PCA):\n",
-    "    pass"
+    "    X=[]\n",
+    "    for word in words:\n",
+    "        X.append(embeddings_dict[word])\n",
+    "        \n",
+    "    transform=func(n_components=2)\n",
+    "    X_reduced=transform.fit_transform(np.asarray(X))\n",
+    "    plt.figure(figsize=(10,5))\n",
+    "    \n",
+    "    for i, word in enumerate(words):\n",
+    "        x,y = X_reduced[i]\n",
+    "        plt.scatter(x,y)\n",
+    "        plt.annotate(word,(x,y), fontsize=8)\n",
+    "        \n",
+    "    plt.xlabel('Principal Component 1')\n",
+    "    plt.ylabel('Principal Component 2')\n",
+    "    plt.title('Word Embeddings Visualization')\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -228,7 +252,7 @@
    "outputs": [],
    "source": [
     "# t-SNE dimensionality reduction for visualization\n",
-    "embeddings = plot_embeddings(PATH, words, emb_dim, embeddings_dict, tSNE)"
+    "embeddings = plot_embeddings(PATH, words, emb_dim, embeddings_dict, TSNE)"
    ]
   },
   {
@@ -248,7 +272,42 @@
    "source": [
     "# analogy\n",
     "def analogy(word1, word2, word3, embeddings_dict):\n",
-    "    pass"
+    "    emb_a=np.asarray(embeddings_dict[word1], dtype=np.float32)\n",
+    "    emb_b=np.asarray(embeddings_dict[word2], dtype=np.float32)\n",
+    "    emb_c=np.asarray(embeddings_dict[word3], dtype=np.float32)\n",
+    "\n",
+    "    words = embeddings_dict.keys()\n",
+    "    max_cosine_sim = -999              \n",
+    "    best_word = None\n",
+    "\n",
+    "    for w in words:        \n",
+    "        # ignore input words\n",
+    "        if w in [word1, word2, word3] :\n",
+    "            continue\n",
+    "\n",
+    "        # Compute cosine similarity between the vectors u and v\n",
+    "        #u:(e_b - e_a) \n",
+    "        #v:((w's vector representation) - e_c)\n",
+    "        \n",
+    "\n",
+    "        u=emb_b - emb_a\n",
+    "        v=np.asarray(embeddings_dict[w], dtype=np.float32) - emb_c\n",
+    "        \n",
+    "        # find the dot product between u and v \n",
+    "        dot = np.dot(u,v)\n",
+    "        # find the L2 norm of u \n",
+    "        norm_u = np.sqrt(np.sum(u**2))\n",
+    "        # Compute the L2 norm of v\n",
+    "        norm_v = np.sqrt(np.sum(v**2))\n",
+    "        # Compute the cosine similarity\n",
+    "        cosine_sim = dot/(norm_u)/norm_v\n",
+    "        \n",
+    "        if cosine_sim > max_cosine_sim:\n",
+    "            max_cosine_sim = cosine_sim\n",
+    "            # update word_d\n",
+    "            best_word = w\n",
+    "        \n",
+    "    return best_word"
    ]
   },
   {
@@ -270,7 +329,28 @@
    "source": [
     "# most similar\n",
     "def find_most_similar(word, embeddings_dict, top_n=10):\n",
-    "    pass"
+    "    word_tarjet=word\n",
+    "    similar={}\n",
+    "    u=np.asarray(embeddings_dict[word_tarjet], dtype=np.float32)\n",
+    "    \n",
+    "    for word in embeddings_dict.keys():     \n",
+    "        \n",
+    "        v=np.asarray(embeddings_dict[word], dtype=np.float32)\n",
+    "        \n",
+    "        # find the dot product between u and v \n",
+    "        dot = np.dot(u,v)\n",
+    "        # find the L2 norm of u \n",
+    "        norm_u = np.linalg.norm(u)\n",
+    "        # Compute the L2 norm of v\n",
+    "        norm_v = np.linalg.norm(v)\n",
+    "        # Compute the cosine similarity\n",
+    "        cosine_sim = dot/(norm_u * norm_v)\n",
+    "        \n",
+    "        similar[word] = cosine_sim\n",
+    "        \n",
+    "    sorted_similar = sorted(similar.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    return sorted_similar[1:top_n+1] "
    ]
   },
   {
